<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <EditText
        android:id="@+id/txt_number2"
        android:layout_width="131dp"
        android:layout_height="41dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="61dp"
        android:ems="10"
        android:hint="@string/number_2"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txt_number1"
        android:layout_width="131dp"
        android:layout_height="41dp"
        android:layout_marginStart="44dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/number_1"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_number2"
        app:layout_constraintEnd_toStartOf="@+id/txt_number2"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/ck_sum"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="42dp"
        android:layout_marginBottom="64dp"
        android:text="@string/sum"
        app:layout_constraintBottom_toBottomOf="@+id/ck_restar"
        app:layout_constraintEnd_toEndOf="@+id/txt_number1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_number1"
        app:layout_constraintVertical_bias="1.0" />

    <CheckBox
        android:id="@+id/ck_restar"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginStart="3dp"
        android:layout_marginTop="127dp"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="128dp"
        android:text="@string/substract"
        app:layout_constraintBottom_toBottomOf="@+id/ck_div"
        app:layout_constraintEnd_toEndOf="@+id/ck_mul"
        app:layout_constraintStart_toStartOf="@+id/ck_sum"
        app:layout_constraintTop_toBottomOf="@+id/txt_number1" />

    <CheckBox
        android:id="@+id/ck_mul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="294dp"
        android:layout_marginBottom="293dp"
        android:text="@string/multiply"
        app:layout_constraintBottom_toBottomOf="@+id/txt_res"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/ck_div"
        android:layout_width="0dp"
        android:layout_height="47dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="60dp"
        android:text="@string/divide"
        app:layout_constraintBottom_toTopOf="@+id/txt_res"
        app:layout_constraintEnd_toEndOf="@+id/ck_sum"
        app:layout_constraintStart_toStartOf="@+id/txt_number1"
        app:layout_constraintTop_toTopOf="@+id/ck_mul"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="77dp"
        android:layout_marginBottom="32dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="@+id/ck_mul"
        app:layout_constraintEnd_toEndOf="parent" />

    <MultiAutoCompleteTextView
        android:id="@+id/txt_res"
        android:layout_width="0dp"
        android:layout_height="172dp"
        android:layout_marginStart="49dp"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="96dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>